# mGroupy

./: CMakeLists.txt  README.md  main.c  public.h
Data/: Boolean.c  Boolean.h  Data.c  Data.h  Nil.c  Nil.h  Number.c  Number.h  Tuple.c  Tuple.h
Node/: Node.c  Node.h  PrivateNode.h
Symbol/: Define.c  Define.h  If.c  If.h  Lambda.c  Lambda.h  Quote.c  Quote.h  Symbol.c  Symbol.h
lex_yacc/: a.out  lex.l  lex.yy.c  usage.txt  yacc.tab.c  yacc.y
